{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlayerControlsTop",
            "id": "f39b4b64-db20-4456-8625-6f89ce161f83",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "65aeb02f-b4ff-48a3-a7ea-57d9d6426b25",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "f794cbdc-5051-4a73-9f1b-439fdb108a01",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "8734338c-0811-45d1-b387-e180a7170063",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "c711d836-43ab-4ee9-95e1-532f8abab0c0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerControlsBottom",
            "id": "c7f28d5e-86fb-4187-ab59-e0d26cb03296",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "750c143c-73ca-4a80-b808-c39a72f234e6",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "17a93ae1-b4ba-45fc-ad6f-84e870984ece",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a4f3beaa-d8de-4ada-90fb-8d451808b339",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "270f90e8-ab70-4def-ab76-86a8d7cd0e48",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}